--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -63,35 +63,54 @@ body {
 /* End text list styling */
 
 /* Begin tickChart styling */
-.tick .game {
+.tickMark .game {
 	position: absolute;
-	top: 0px;
+	/*top: -1px;*/
 
-	background-color: black;
+	background-color: #666666;
 	width: 1px;
 	height: 10px;
 
 
 	cursor: pointer;
-/*
-    transform: rotate(-45deg);
-    transform-origin: 0 -5px;*/
+
     border-radius: 2px;
 }
 
-.tick .game.win {
-	top: -10px; /* Same as -1 * height */
-
-/*
-    transform: rotate(45deg);
-    transform-origin: 0 5px;*/
+.tickMark .game.win {
+	/*top: -10px;  Same as -1 * height */
 }
 
-.tick {
+.tickMark {
 	margin-top: 30px;
 	width: 300px;
-	height: 1px;
-	border-top: solid 1px black;
+	height: 100px;
+	border-bottom: solid 1px #ccc;
+
+	border-left: solid 1px #ccc;
+	position: absolute;
+	top: 0;
+	left: 0;
+}
+
+.tickMarkList {
 	position: relative;
 }
 /* End tickChart styling */
+
+/* Begin line chart */
+path {
+	stroke: steelblue;
+	stroke-width: 1;
+	fill: none;
+}
+
+.x.axis path {
+  display: none;
+}
+
+.y.axis line, .y.axis path, .tick {
+  fill: none;
+  stroke: #ccc;
+}
+/* End line chart */
