--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -85,9 +85,9 @@ body {
 	position: absolute;
 	/*top: -1px;*/
 
-	background-color: #666666;
+	background-color: rgba(0, 0, 0, 0);
 	width: 1px;
-	height: 10px;
+	height:100%;
 
 
 	cursor: pointer;
@@ -117,6 +117,11 @@ body {
 /* End tickChart styling */
 
 /* Begin line chart */
+svg.lineSvgWrapper {
+	width: 300px;
+	height: 100px;
+}
+
 path {
 	stroke: steelblue;
 	stroke-width: 1;
